# scraper

./: Cargo.toml  samconfig.toml  template.yaml
exporter/: Cargo.toml
exporter/src/: export.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs  queue.rs
shared/src/types/: dataset.rs  error.rs  message.rs  mod.rs
syncer/: Cargo.toml
syncer/src/: main.rs  syncer.rs
