[package]
name = "exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compression = { version = "0.4.23", features = ["gzip", "futures-io"] }
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
openssl = { version = "0.10.72", features = ["vendored"] }
reqwest = { version = "0.12.15", features = ["rustls-tls", "json", "gzip", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
static_init = "1.0.3"
tokio = { version = "1.44.2", features = ["full"] }
shared = {path = "../shared"}
serde_json = "1.0.140"
lambda_runtime = "0.13.0"
