[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.6.2"
aws-sdk-sqs = "1.67.0"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
openssl = { version = "0.10.72", features = ["vendored"] }
reqwest = { version = "0.12.15", features = ["rustls-tls", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
